[package]
name = "rlrisk"
version = "0.1.0"
authors = ["Ben Thompson <t.ben.thompson@gmail.com>"]
edition = "2018"

[lib]
name = "risk_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13"
ndarray = "0.14"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dependencies.rand]
version = "*"
