[package]
name = "risk_ext"
version = "0.1.0"
authors = ["Ben Thompson <t.ben.thompson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.13"
ndarray = "0.14"
rstest = "*"

[dependencies.pyo3]
version = "0.13"

[dependencies.rand]
version = "*"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
